--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,6 +5,7 @@
 # Required packages to test and build the project. They should not be installed by the client.
 
 -r requirements.txt
+-r connectors/python/tabsdata_mongodb/requirements.txt
 -r connectors/python/tabsdata_salesforce/requirements.txt
 
 # Third-party dependencies
