[TD-95] Test requirements for S3 and Azure should include the URIs (#93)
* Renamed S3 and AZ storage requirements to:
    * S3WithAccessKeySecretKeyReqs
    * AzureStorageWithAccountKeyReqs

--- a/server/libraries/td-test/Cargo.toml
+++ b/server/libraries/td-test/Cargo.toml
@@ -54,8 +54,15 @@ td-schema = { workspace = true }
 # External dependencies
 
 async-trait = { workspace = true }
+chrono = { workspace = true }
+hex = { workspace = true }
+homedir = { workspace = true }
+lazy_static = { workspace = true }
+sha2= { workspace = true }
 sqlx = { workspace = true, features = ["runtime-tokio", "macros"] }
+testdir = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
+whoami = { workspace = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 openssl = { workspace = true, features = ["vendored"] }
