[TD-110] Mount tests should use S3 and Azure requirements for running tests (#108)
* Enabling Azure mount configuration as well

--- a/server/libraries/td-storage/Cargo.toml
+++ b/server/libraries/td-storage/Cargo.toml
@@ -48,6 +48,7 @@ ignored = ["openssl", "strum_macros", "td-build", "thiserror", "toml"]
 
 td-common = { workspace = true }
 td-error = { workspace = true }
+td-test = { workspace = true }
 
 # External dependencies
 
