[TD-112] Rename workers dataset to function (#116)

--- a/server/binaries/td-server/resources/profiles/external/dummy/workspace/config/config.yaml
+++ b/server/binaries/td-server/resources/profiles/external/dummy/workspace/config/config.yaml
@@ -59,7 +59,7 @@ controllers:
   ephemeral:
     concurrency: 8
     workers:
-      - name: dataset
+      - name: function
         kind: processor
         location: system
         program: tdmain
