--- a/server/binaries/td-server/resources/profiles/internal/default/workspace/config/config.yaml
+++ b/server/binaries/td-server/resources/profiles/internal/default/workspace/config/config.yaml
@@ -29,7 +29,7 @@ controllers:
   ephemeral:
     concurrency: 8
     workers:
-      - name: dataset
+      - name: function
         kind: processor
         location: system
         program: tdmain
