--- a/Makefile.toml
+++ b/Makefile.toml
@@ -41,8 +41,8 @@ PROFILE = "${profile:dev}"
 PROJECT_ROOT_FOLDER = { value = "${ROOT_PROJECT_FOLDER}/", normalize = true }
 PROJECT_MACROS_FOLDER = { value = "${ROOT_PROJECT_FOLDER}/macros/", normalize = true }
 PROJECT_TD_FEATURES_FOLDER = { value = "${ROOT_PROJECT_FOLDER}/client/td-lib/td_features/", normalize = true }
-PROJECT_TA_INTERCEPTOR_FOLDER = { value = "${ROOT_PROJECT_FOLDER}/client/td-lib/ta_interceptor/", normalize = true }
-PROJECT_TD_INTERCEPTOR_FOLDER = { value = "${ROOT_PROJECT_FOLDER}/extensions/python/td-lib/td_interceptor/", normalize = true }
+PROJECT_TA_TABLEFRAME_FOLDER = { value = "${ROOT_PROJECT_FOLDER}/client/td-lib/ta_tableframe/", normalize = true }
+PROJECT_TD_TABLEFRAME_FOLDER = { value = "${ROOT_PROJECT_FOLDER}/extensions/python/td-lib/te_tableframe/", normalize = true }
 PROJECT_TD_SDK_FOLDER = { value = "${ROOT_PROJECT_FOLDER}/client/td-sdk/", normalize = true }
 PROJECT_TABSDATA_SALESFORCE_FOLDER = { value = "${ROOT_PROJECT_FOLDER}/connectors/python/tabsdata_salesforce/", normalize = true }
 
@@ -50,8 +50,8 @@ PROJECT_ROOT_CARGO_TOML = { value = "${ROOT_PROJECT_FOLDER}/Cargo.toml", normali
 PROJECT_MACROS_CARGO_TOML = { value = "${ROOT_PROJECT_FOLDER}/macros/Cargo.toml", normalize = true }
 
 TESTS_TD_FEATURES_FOLDER = { value = "tests_td_features/", normalize = true }
-TESTS_TA_INTERCEPTOR_FOLDER = { value = "tests_ta_interceptor/", normalize = true }
-TESTS_TD_INTERCEPTOR_FOLDER = { value = "tests_td_interceptor/", normalize = true }
+TESTS_TA_TABLEFRAME_FOLDER = { value = "tests_ta_tableframe/", normalize = true }
+TESTS_TD_TABLEFRAME_FOLDER = { value = "tests_te_tableframe/", normalize = true }
 TESTS_TABSDATA_FOLDER = { value = "tests_tabsdata/", normalize = true }
 TESTS_TABSDATA_SALESFORCE_FOLDER = { value = "tests_tabsdata_salesforce/", normalize = true }
 
