--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -60,7 +60,7 @@ panic = "abort"
 strip = "debuginfo"
 
 [package.metadata.cargo-machete]
-ignored = ["td-interceptor-api"]
+ignored = ["ta-tableframe"]
 
 [features]
 
