--- a/make/fragments/tasks/clean_py.toml
+++ b/make/fragments/tasks/clean_py.toml
@@ -8,8 +8,8 @@ run_task = [
     { name = [
         "clean_py_root",
         "clean_py_td_features",
-        "clean_py_ta_interceptor",
-        "clean_py_td_interceptor",
+        "clean_py_ta_tableframe",
+        "clean_py_te_tableframe",
         "clean_py_tabsdata",
         "clean_py_tabsdata_salesforce",
     ] }
@@ -25,15 +25,15 @@ private = true
 command = "python3"
 args = ["${CLEAN_PYTHON_PY}", "${PROJECT_TD_FEATURES_FOLDER}", "py"]
 
-[tasks.clean_py_ta_interceptor]
+[tasks.clean_py_ta_tableframe]
 private = true
 command = "python3"
-args = ["${CLEAN_PYTHON_PY}", "${PROJECT_TA_INTERCEPTOR_FOLDER}", "py"]
+args = ["${CLEAN_PYTHON_PY}", "${PROJECT_TA_TABLEFRAME_FOLDER}", "py"]
 
-[tasks.clean_py_td_interceptor]
+[tasks.clean_py_te_tableframe]
 private = true
 command = "python3"
-args = ["${CLEAN_PYTHON_PY}", "${PROJECT_TD_INTERCEPTOR_FOLDER}", "py"]
+args = ["${CLEAN_PYTHON_PY}", "${PROJECT_TD_TABLEFRAME_FOLDER}", "py"]
 
 [tasks.clean_py_tabsdata]
 private = true
