[TD-120] Support to test.env environment variables file (#118)

--- a/.custom/make-ci.env
+++ b/.custom/make-ci.env
@@ -6,6 +6,9 @@
 
 # Use syntax KEY=VALUE, with no spaces, to override the default values.
 
+# The env file is a simple key=value, which is similar to dotenv, but only supports
+# variable interpolation using the ${} syntax.
+
 DUCKSCRIPT_LOG_LEVEL=debug
 PYTHON_LOG_LEVEL=DEBUG
 TD_BUILD_ALL=true
