--- a/.custom/make-dev.env
+++ b/.custom/make-dev.env
@@ -17,6 +17,9 @@
 
 # Use the syntax KEY=VALUE, without spaces, to override default or predefined values.
 
+# The env file is a simple key=value, which is similar to dotenv, but only supports
+# variable interpolation using the ${} syntax.
+
 DUCKSCRIPT_LOG_LEVEL=info
 PYTHON_LOG_LEVEL=info
 TD_BUILD_ALL=false
