--- a/.custom/test-ci.env
+++ b/.custom/test-ci.env
@@ -30,3 +30,5 @@
 #
 # IDEs will load this file use the entries giving precedence to the values defined in environment variables.
 #
+# The env file is a simple key=value, which is similar to dotenv, but only supports
+# variable interpolation using the ${} syntax.
