[TD-122] Prepare build tools for connector mongodb (#120)

--- a/.custom/bump.cfg
+++ b/.custom/bump.cfg
@@ -2,10 +2,15 @@ connectors/python/tabsdata_salesforce/tabsdata_salesforce/assets/manifest/RELEAS
 connectors/python/tabsdata_salesforce/tabsdata_salesforce/assets/manifest/THIRD-PARTY
 connectors/python/tabsdata_salesforce/tabsdata_salesforce/assets/manifest/VERSION
 requirements-connector-salesforce.txt
+connectors/python/tabsdata_mongodb/tabsdata_mongodb/assets/manifest/RELEASE-NOTES
+connectors/python/tabsdata_mongodb/tabsdata_mongodb/assets/manifest/THIRD-PARTY
+connectors/python/tabsdata_mongodb/tabsdata_mongodb/assets/manifest/VERSION
+requirements-connector-mongodb.txt
 requirements-dev-first-party.txt_
 requirements-first-party.txt_
 assets/manifest/THIRD-PARTY_connectors
 assets/manifest/VERSION
 client/td-sdk/tabsdata/assets/manifest/RELEASE-NOTES
 connectors/python/tabsdata_salesforce/tabsdata_salesforce/VERSION
+connectors/python/tabsdata_salesforce/tabsdata_mongodb/VERSION
 variant/assets/manifest/RELEASE-NOTES
