--- a/Makefile.toml
+++ b/Makefile.toml
@@ -46,6 +46,7 @@ PROJECT_TA_TABLEFRAME_FOLDER = { value = "${ROOT_PROJECT_FOLDER}/client/td-lib/t
 PROJECT_TD_TABLEFRAME_FOLDER = { value = "${ROOT_PROJECT_FOLDER}/extensions/python/td-lib/te_tableframe/", normalize = true }
 PROJECT_TD_SDK_FOLDER = { value = "${ROOT_PROJECT_FOLDER}/client/td-sdk/", normalize = true }
 PROJECT_TABSDATA_SALESFORCE_FOLDER = { value = "${ROOT_PROJECT_FOLDER}/connectors/python/tabsdata_salesforce/", normalize = true }
+PROJECT_TABSDATA_MONGODB_FOLDER = { value = "${ROOT_PROJECT_FOLDER}/connectors/python/tabsdata_mongodb/", normalize = true }
 
 PROJECT_ROOT_CARGO_TOML = { value = "${ROOT_PROJECT_FOLDER}/Cargo.toml", normalize = true }
 PROJECT_MACROS_CARGO_TOML = { value = "${ROOT_PROJECT_FOLDER}/macros/Cargo.toml", normalize = true }
@@ -55,6 +56,7 @@ TESTS_TA_TABLEFRAME_FOLDER = { value = "tests_ta_tableframe/", normalize = true 
 TESTS_TD_TABLEFRAME_FOLDER = { value = "tests_te_tableframe/", normalize = true }
 TESTS_TABSDATA_FOLDER = { value = "tests_tabsdata/", normalize = true }
 TESTS_TABSDATA_SALESFORCE_FOLDER = { value = "tests_tabsdata_salesforce/", normalize = true }
+TESTS_TABSDATA_MONGODB_FOLDER = { value = "tests_tabsdata_mongodb/", normalize = true }
 
 RUST_DOCS = { value = "${ROOT_PROJECT_FOLDER}/target/doc/tabsdatalib/index.html", normalize = true }
 PYTHON_DOCS = { value = "${ROOT_PROJECT_FOLDER}/client/td-sdk/site/index.html", normalize = true }
@@ -155,7 +157,19 @@ run_task = [
     ] }
 ]
 
+
 #####
+
+[tasks.duck]
+cwd = "${ROOT_PROJECT_FOLDER}"
+script_runner = "@duckscript"
+script = [
+    '''
+    !include_files ./make/libraries/log.ds
+
+    info "🦆"
+    ''']
+
 
 [tasks.make]
 run_task = [
@@ -1048,6 +1062,7 @@ run_task = [
     { name = [
         "package_py_tabsdata",
         "package_py_tabsdata_salesforce",
+        "package_py_tabsdata_mongodb",
     ] }
 ]
 
@@ -1062,6 +1077,15 @@ script = [
 
 [tasks.package_py_tabsdata_salesforce]
 cwd = "${PROJECT_TABSDATA_SALESFORCE_FOLDER}"
+script_runner = "@duckscript"
+script = [
+    '''
+    echo "Running command: python3 setup.py sdist --dist-dir target/python/dist --formats=tar bdist_wheel --dist-dir target/python/dist --compression stored"
+    exec --fail-on-error python3 setup.py sdist --dist-dir target/python/dist --formats=tar bdist_wheel --dist-dir target/python/dist --compression stored
+    ''']
+
+[tasks.package_py_tabsdata_mongodb]
+cwd = "${PROJECT_TABSDATA_MONGODB_FOLDER}"
 script_runner = "@duckscript"
 script = [
     '''
@@ -1084,36 +1108,106 @@ run_task = [
     { name = [
         "assembly_py_tabsdata",
         "assembly_py_tabsdata_salesforce",
+        "assembly_py_tabsdata_mongodb",
     ] }
 ]
 
 [tasks.assembly_py_tabsdata]
-cwd = "${ROOT_PROJECT_FOLDER}"
 dependencies = ["license", "copy_assets"]
 script_runner = "@duckscript"
 script = [
     '''
-    set_env REQUIRE_SERVER_BINARIES "true"
-    set_env REQUIRE_THIRD_PARTY "true"
-    set_env TD_IGNORE_CONNECTOR_REQUIREMENTS "false"
-    set_env TD_SKIP_NON_EXISTING_ASSETS "false"
+    !include_files ./make/libraries/log.ds
+
+    cd "${ROOT_PROJECT_FOLDER}"
+
+    td_pypi_linked = get_env TD_PYTHON_LINKED_TO_REPOSITORY
+    if eq ${td_pypi_linked} ""
+        info "🔗 Unespecified link to python repository status... defaulting to true"
+        td_pypi_linked = set "true"
+    else
+        info "🔗 Specified link to python repository status: true"
+    end
+    if eq ${td_pypi_linked} "true"
+        set_env REQUIRE_SERVER_BINARIES "true"
+        set_env REQUIRE_THIRD_PARTY "true"
+        set_env TD_IGNORE_CONNECTOR_REQUIREMENTS "false"
+        set_env TD_SKIP_NON_EXISTING_ASSETS "false"
+    else
+        set_env REQUIRE_SERVER_BINARIES "false"
+        set_env REQUIRE_THIRD_PARTY "false"
+        set_env TD_IGNORE_CONNECTOR_REQUIREMENTS "true"
+        set_env TD_SKIP_NON_EXISTING_ASSETS "true"
+    end
     # This must be false when using a local PyPi reopsitory.
     set_env PYTHON_IGNORE_UNAVAILABLE_PUBLIC_PACKAGES = "true"
+
     echo "Running command: python3 setup.py sdist --dist-dir target/python/dist bdist_wheel --dist-dir target/python/dist"
     exec --fail-on-error python3 setup.py sdist --dist-dir target/python/dist bdist_wheel --dist-dir target/python/dist
     ''']
 
 [tasks.assembly_py_tabsdata_salesforce]
-cwd = "${PROJECT_TABSDATA_SALESFORCE_FOLDER}"
 script_runner = "@duckscript"
 script = [
     '''
-    set_env REQUIRE_SERVER_BINARIES "true"
-    set_env REQUIRE_THIRD_PARTY "true"
-    set_env TD_IGNORE_CONNECTOR_REQUIREMENTS "false"
-    set_env TD_SKIP_NON_EXISTING_ASSETS "false"
+    !include_files ./make/libraries/log.ds
+
+    cd "${PROJECT_TABSDATA_SALESFORCE_FOLDER}"
+
+    td_pypi_linked = get_env TD_PYTHON_LINKED_TO_REPOSITORY
+    if eq ${td_pypi_linked} ""
+        info "🔗 Unespecified link to python repository status... defaulting to true"
+        td_pypi_linked = set "true"
+    else
+        info "🔗 Specified link to python repository status: true"
+    end
+    if eq ${td_pypi_linked} "true"
+        set_env REQUIRE_SERVER_BINARIES "true"
+        set_env REQUIRE_THIRD_PARTY "true"
+        set_env TD_IGNORE_CONNECTOR_REQUIREMENTS "false"
+        set_env TD_SKIP_NON_EXISTING_ASSETS "false"
+    else
+        set_env REQUIRE_SERVER_BINARIES "false"
+        set_env REQUIRE_THIRD_PARTY "false"
+        set_env TD_IGNORE_CONNECTOR_REQUIREMENTS "true"
+        set_env TD_SKIP_NON_EXISTING_ASSETS "true"
+    end
     # This must be false when using a local PyPi reopsitory.
     set_env PYTHON_IGNORE_UNAVAILABLE_PUBLIC_PACKAGES = "true"
+
+    echo "Running command: python3 setup.py sdist --dist-dir target/python/dist bdist_wheel --dist-dir target/python/dist"
+    exec --fail-on-error python3 setup.py sdist --dist-dir target/python/dist bdist_wheel --dist-dir target/python/dist
+    ''']
+
+[tasks.assembly_py_tabsdata_mongodb]
+script_runner = "@duckscript"
+script = [
+    '''
+    !include_files ./make/libraries/log.ds
+
+    cd "${PROJECT_TABSDATA_MONGODB_FOLDER}"
+
+    td_pypi_linked = get_env TD_PYTHON_LINKED_TO_REPOSITORY
+    if eq ${td_pypi_linked} ""
+        info "🔗 Unespecified link to python repository status... defaulting to true"
+        td_pypi_linked = set "true"
+    else
+        info "🔗 Specified link to python repository status: true"
+    end
+    if eq ${td_pypi_linked} "true"
+        set_env REQUIRE_SERVER_BINARIES "true"
+        set_env REQUIRE_THIRD_PARTY "true"
+        set_env TD_IGNORE_CONNECTOR_REQUIREMENTS "false"
+        set_env TD_SKIP_NON_EXISTING_ASSETS "false"
+    else
+        set_env REQUIRE_SERVER_BINARIES "false"
+        set_env REQUIRE_THIRD_PARTY "false"
+        set_env TD_IGNORE_CONNECTOR_REQUIREMENTS "true"
+        set_env TD_SKIP_NON_EXISTING_ASSETS "true"
+    end
+    # This must be false when using a local PyPi reopsitory.
+    set_env PYTHON_IGNORE_UNAVAILABLE_PUBLIC_PACKAGES = "true"
+
     echo "Running command: python3 setup.py sdist --dist-dir target/python/dist bdist_wheel --dist-dir target/python/dist"
     exec --fail-on-error python3 setup.py sdist --dist-dir target/python/dist bdist_wheel --dist-dir target/python/dist
     ''']
@@ -1133,21 +1227,40 @@ run_task = [
 run_task = [
     { name = [
         "install_py_tabsdata_salesforce",
+        "install_py_tabsdata_mongodb",
         "install_py_tabsdata",
     ] }
 ]
 
 [tasks.install_py_tabsdata_salesforce]
-cwd = "${PROJECT_TABSDATA_SALESFORCE_FOLDER}"
 script_runner = "@duckscript"
 script = [
     '''
-    set_env REQUIRE_SERVER_BINARIES "true"
-    set_env REQUIRE_THIRD_PARTY "true"
-    set_env TD_IGNORE_CONNECTOR_REQUIREMENTS "false"
-    set_env TD_SKIP_NON_EXISTING_ASSETS "false"
+    !include_files ./make/libraries/log.ds
+
+    cd "${PROJECT_TABSDATA_SALESFORCE_FOLDER}"
+
+    td_pypi_linked = get_env TD_PYTHON_LINKED_TO_REPOSITORY
+    if eq ${td_pypi_linked} ""
+        info "🔗 Unespecified link to python repository status... defaulting to true"
+        td_pypi_linked = set "true"
+    else
+        info "🔗 Specified link to python repository status: true"
+    end
+    if eq ${td_pypi_linked} "true"
+        set_env REQUIRE_SERVER_BINARIES "true"
+        set_env REQUIRE_THIRD_PARTY "true"
+        set_env TD_IGNORE_CONNECTOR_REQUIREMENTS "false"
+        set_env TD_SKIP_NON_EXISTING_ASSETS "false"
+    else
+        set_env REQUIRE_SERVER_BINARIES "false"
+        set_env REQUIRE_THIRD_PARTY "false"
+        set_env TD_IGNORE_CONNECTOR_REQUIREMENTS "true"
+        set_env TD_SKIP_NON_EXISTING_ASSETS "true"
+    end
     # This must be false when using a local PyPi reopsitory.
     set_env PYTHON_IGNORE_UNAVAILABLE_PUBLIC_PACKAGES = "true"
+
     exec --fail-on-error pip3 uninstall tabsdata_salesforce --yes
     wheels = glob_array ./target/python/dist/tabsdata_salesforce*.whl
     for wheel in ${wheels}
@@ -1156,17 +1269,72 @@ script = [
     end
     ''']
 
-[tasks.install_py_tabsdata]
-cwd = "${ROOT_PROJECT_FOLDER}"
+[tasks.install_py_tabsdata_mongodb]
 script_runner = "@duckscript"
 script = [
     '''
-    set_env REQUIRE_SERVER_BINARIES "true"
-    set_env REQUIRE_THIRD_PARTY "true"
-    set_env TD_IGNORE_CONNECTOR_REQUIREMENTS "false"
-    set_env TD_SKIP_NON_EXISTING_ASSETS "false"
+    !include_files ./make/libraries/log.ds
+
+    cd "${PROJECT_TABSDATA_MONGODB_FOLDER}"
+
+    td_pypi_linked = get_env TD_PYTHON_LINKED_TO_REPOSITORY
+    if eq ${td_pypi_linked} ""
+        info "🔗 Unespecified link to python repository status... defaulting to true"
+        td_pypi_linked = set "true"
+    else
+        info "🔗 Specified link to python repository status: true"
+    end
+    if eq ${td_pypi_linked} "true"
+        set_env REQUIRE_SERVER_BINARIES "true"
+        set_env REQUIRE_THIRD_PARTY "true"
+        set_env TD_IGNORE_CONNECTOR_REQUIREMENTS "false"
+        set_env TD_SKIP_NON_EXISTING_ASSETS "false"
+    else
+        set_env REQUIRE_SERVER_BINARIES "false"
+        set_env REQUIRE_THIRD_PARTY "false"
+        set_env TD_IGNORE_CONNECTOR_REQUIREMENTS "true"
+        set_env TD_SKIP_NON_EXISTING_ASSETS "true"
+    end
     # This must be false when using a local PyPi reopsitory.
     set_env PYTHON_IGNORE_UNAVAILABLE_PUBLIC_PACKAGES = "true"
+
+    exec --fail-on-error pip3 uninstall tabsdata_mongodb --yes
+    wheels = glob_array ./target/python/dist/tabsdata_mongodb*.whl
+    for wheel in ${wheels}
+        echo "Running command: pip3 install ${wheel}"
+        exec --fail-on-error pip3 install ${wheel}
+    end
+    ''']
+
+[tasks.install_py_tabsdata]
+script_runner = "@duckscript"
+script = [
+    '''
+    !include_files ./make/libraries/log.ds
+
+    cd "${ROOT_PROJECT_FOLDER}"
+
+    td_pypi_linked = get_env TD_PYTHON_LINKED_TO_REPOSITORY
+    if eq ${td_pypi_linked} ""
+        info "🔗 Unespecified link to python repository status... defaulting to true"
+        td_pypi_linked = set "true"
+    else
+        info "🔗 Specified link to python repository status: true"
+    end
+    if eq ${td_pypi_linked} "true"
+        set_env REQUIRE_SERVER_BINARIES "true"
+        set_env REQUIRE_THIRD_PARTY "true"
+        set_env TD_IGNORE_CONNECTOR_REQUIREMENTS "false"
+        set_env TD_SKIP_NON_EXISTING_ASSETS "false"
+    else
+        set_env REQUIRE_SERVER_BINARIES "false"
+        set_env REQUIRE_THIRD_PARTY "false"
+        set_env TD_IGNORE_CONNECTOR_REQUIREMENTS "true"
+        set_env TD_SKIP_NON_EXISTING_ASSETS "true"
+    end
+    # This must be false when using a local PyPi reopsitory.
+    set_env PYTHON_IGNORE_UNAVAILABLE_PUBLIC_PACKAGES = "true"
+
     exec --fail-on-error pip3 uninstall tabsdata --yes
     wheels = glob_array ./target/python/dist/tabsdata*.whl
     for wheel in ${wheels}
@@ -1190,6 +1358,7 @@ run_task = [
     { name = [
         "uninstall_py_tabsdata",
         "uninstall_py_tabsdata_salesforce",
+        "uninstall_py_tabsdata_mongodb",
     ] }
 ]
 
@@ -1200,6 +1369,7 @@ script = [
     '''
     exec --fail-on-error pip3 uninstall tabsdata --yes
     exec uv cache clean
+    exec pip cache purge
     exec python setup.py clean --all
     rm -r ${ROOT_PROJECT_FOLDER}/target/python/
     ''']
@@ -1211,8 +1381,21 @@ script = [
     '''
     exec --fail-on-error pip3 uninstall tabsdata_salesforce --yes
     exec uv cache clean
+    exec pip cache purge
     exec python setup.py clean --all
     rm -r ${PROJECT_TABSDATA_SALESFORCE_FOLDER}/target/python/
+    ''']
+
+[tasks.uninstall_py_tabsdata_mongodb]
+cwd = "${PROJECT_TABSDATA_MONGODB_FOLDER}"
+script_runner = "@duckscript"
+script = [
+    '''
+    exec --fail-on-error pip3 uninstall tabsdata_mongodb --yes
+    exec uv cache clean
+    exec pip cache purge
+    exec python setup.py clean --all
+    rm -r ${PROJECT_TABSDATA_MONGODB_FOLDER}/target/python/
     ''']
 
 [tasks.deploy]
