--- a/make/fragments/scripts/environment.toml
+++ b/make/fragments/scripts/environment.toml
@@ -66,6 +66,7 @@ env_scripts = [
     root_folder = get_env ROOT_PROJECT_FOLDER
     root_tabsdata_folder = set ${root_folder}
     root_tabsdata_salesforce_folder = set ${root_folder}/connectors/python/tabsdata_salesforce
+    root_tabsdata_mongodb_folder = set ${root_folder}/connectors/python/tabsdata_mongodb
 
     if not is_empty ${td-target}
         set_env td-target ${td-target}
@@ -136,6 +137,7 @@ env_scripts = [
 
     old_path = get_env PATH
     new_path = concat ${root_tabsdata_salesforce_folder}/target/${build-folder} ${separator} ${root_tabsdata_salesforce_folder}/target/pytest/build ${separator} ${old_path}
+    new_path = concat ${root_tabsdata_mongodb_folder}/target/${build-folder} ${separator} ${root_tabsdata_mongodb_folder}/target/pytest/build ${separator} ${old_path}
     new_path = concat ${root_tabsdata_folder}/target/${build-folder} ${separator} ${root_tabsdata_folder}/target/pytest/build ${separator} ${old_path}
     set_env PATH ${new_path}
     set_path = get_env PATH
