--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,11 @@ defaults:
 on:
   workflow_dispatch:
     inputs:
+      job_timeout:
+        description: "Time in minutes before cancelling the job"
+        required: true
+        type: number
+        default: 180
       dump_server:
         description: "Dump full server instance contents for hard investigations"
         required: false
@@ -57,9 +62,23 @@ on:
     - cron: "0 2 * * 1-5"
 
 jobs:
+  cap-job:
+    name: Cap Job
+    permissions: write-all
+    runs-on: ubuntu-latest
+    outputs:
+      job_timeout: ${{ steps.set-timeout.outputs.job_timeout }}
+
+    steps:
+      - name: Set Timeout
+        id: set-timeout
+        run: echo "job_timeout=${{ inputs.job_timeout || 180 }}" >> $GITHUB_OUTPUT
+
   describe-job:
     name: Describe Job
     permissions: write-all
+    needs:
+      - cap-job
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -72,6 +91,7 @@ jobs:
       run_on_macos_arm_64: ${{ steps.set-outputs.outputs.run_on_macos_arm_64 }}
       run_on_windows_x86_64: ${{ steps.set-outputs.outputs.run_on_windows_x86_64 }}
       run_on_windows_arm_64: ${{ steps.set-outputs.outputs.run_on_windows_arm_64 }}
+    timeout-minutes: ${{ fromJson(needs.cap-job.outputs.job_timeout) }}
 
     steps:
       - name: Show Inputs
@@ -150,7 +170,9 @@ jobs:
   dispatch-job:
     name: Dispatch Job
     permissions: write-all
-    needs: describe-job
+    needs:
+      - cap-job
+      - describe-job
     uses: tabsdata/tabsdata-ci/.github/workflows/make.yml@main
     secrets:
       PAT_AOINOKIMI: ${{ secrets.PAT_AOINOKIMI }}
@@ -163,6 +185,7 @@ jobs:
       SALESFORCE_PASSWORD: ${{ secrets.SALESFORCE_PASSWORD }}
       SALESFORCE_SECURITY_TOKEN: ${{ secrets.SALESFORCE_SECURITY_TOKEN }}
     with:
+      job_timeout: ${{ fromJson(needs.cap-job.outputs.job_timeout) }}
       td_product: "standard"
       runner_mode: "release"
       dump_server: ${{ inputs.dump_server }}
