Patch crate zip2 to version 2.4.2 until utoips tools adapt to version 2.5.0 (#127)

--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -176,3 +176,6 @@ version = "2.5.0"
 # Internal dependencies
 
 td-build = { workspace = true }
+
+[patch.crates-io]
+zip = { git = "https://github.com/zip-rs/zip2", tag = "v2.4.2" }
