[TD-135] Add iana-time-zone to the cargo deny exceptions file (#131)

--- a/.cargo/deny.toml
+++ b/.cargo/deny.toml
@@ -30,6 +30,7 @@ ignore = [
 
 deny = [{ crate = "log", reason = "We use 'tracing' crate instead, which has equivalent macros to the ones in 'log' crate", wrappers = [
     "globset",
+    "iana-time-zone",
     "ignore",
     "mio",
     "native-tls",
