[TD-132] Rename Tableframe* to TableFrame* (#128)

--- a/extensions/rust/te-tableframe/Cargo.toml
+++ b/extensions/rust/te-tableframe/Cargo.toml
@@ -3,7 +3,7 @@
 #
 
 [package]
-description = "Tabsdata Tableframe Extension Implementation - Standard"
+description = "Tabsdata TableFrame Extension Implementation - Standard"
 name = "te-tableframe"
 build = "build.rs"
 
