[TD-138] Force UV_NO_BUILD_ISOLATION to stop uv from using latest setuptools version (#136)

--- a/make/settings/makers.env
+++ b/make/settings/makers.env
@@ -4,6 +4,8 @@
 
 TD_BUILD_ALL=false
 
+UV_NO_BUILD_ISOLATION=true
+
 REQUIRE_SERVER_BINARIES=false
 REQUIRE_THIRD_PARTY=false
 TD_IGNORE_CONNECTOR_REQUIREMENTS=true
