[TD-139] Disable UV_NO_BUILD_ISOLATION uv flag (#137)

--- a/make/settings/makers.env
+++ b/make/settings/makers.env
@@ -4,7 +4,7 @@
 
 TD_BUILD_ALL=false
 
-UV_NO_BUILD_ISOLATION=true
+# UV_NO_BUILD_ISOLATION=true
 
 REQUIRE_SERVER_BINARIES=false
 REQUIRE_THIRD_PARTY=false
