[TD-118] Function register service (#115)

--- a/server/libraries/td-services/Cargo.toml
+++ b/server/libraries/td-services/Cargo.toml
@@ -25,7 +25,7 @@ test_tower_metadata = ["td-tower/test_tower_metadata"]
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "tower"]
+ignored = ["openssl", "strum_macros", "thiserror", "tower"]
 
 # Build dependencies
 
@@ -52,6 +52,8 @@ td-tower = { workspace = true }
 # External dependencies
 
 async-trait = { workspace = true }
+strum_macros = { workspace = true }
+thiserror = { workspace = true }
 tokio = { workspace = true }
 tower = { workspace = true }
 
