[TD-145] Update function service (#142)
[TD-145] Update function service

assert update fn does not exist

fixing frozen tables in updates

[TD-145]: https://tabsdata.atlassian.net/browse/TD-145?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

--- a/server/libraries/td-services/Cargo.toml
+++ b/server/libraries/td-services/Cargo.toml
@@ -45,6 +45,7 @@ td-error = { workspace = true }
 
 ## Libraries
 
+td-common = { workspace = true }
 td-database = { workspace = true }
 td-objects = { workspace = true }
 td-tower = { workspace = true }
@@ -52,6 +53,7 @@ td-tower = { workspace = true }
 # External dependencies
 
 async-trait = { workspace = true }
+lazy_static = { workspace = true }
 strum_macros = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
