[TD-150] Use leading _ for programs not intended to be used directly by the end user (#148)

--- a/server/binaries/td-server/resources/profiles/internal/default/workspace/config/config.yaml
+++ b/server/binaries/td-server/resources/profiles/internal/default/workspace/config/config.yaml
@@ -32,7 +32,7 @@ controllers:
       - name: function
         kind: processor
         location: system
-        program: tdmain
+        program: _tdinvoker
         concurrency: 8
         retries: 2
         arguments:
