--- a/server/binaries/td-server/resources/profiles/external/dummy/workspace/config/config.yaml
+++ b/server/binaries/td-server/resources/profiles/external/dummy/workspace/config/config.yaml
@@ -62,7 +62,7 @@ controllers:
       - name: function
         kind: processor
         location: system
-        program: tdmain
+        program: _tdinvoker
         concurrency: 8
         retries: 2
         arguments:
